--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,9 @@
   {% else %}
   {% include contact.html %}
   {% endif %}
+  
+  {% include modals.html %}
+  {% include js.html %}  
 </body>
 
 </html>
