--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,16 +1,8 @@
-<!-- Footer -->
+<!-- Contact -->
 <footer class="text-center" id="contact">
   <div class="footer-above">
     <div class="container">
       <div class="row">
-        <div class="footer-col col-md-4">
-          <h3>{{ site.footer.location }}</h3>
-          <p>
-            {% for adress in site.address %}
-            {{ adress.line }} <br>
-            {% endfor %}
-          </p>
-        </div>
         <div class="footer-col col-md-4">
           <h3>{{ site.footer.social }}</h3>
           <ul class="list-inline">
@@ -22,6 +14,14 @@
             {% endfor %}
           </ul>
         </div>
+        <div class="footer-col col-md-4">
+          <h3>{{ site.footer.location }}</h3>
+          <p>
+            {% for adress in site.address %}
+            {{ adress.line }} <br>
+            {% endfor %}
+          </p>
+        </div>        
         <div class="footer-col col-md-4">
           <h3>{{ site.footer.credits }}</h3>
           <p>{{ site.credits }}</p>
