--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -3,6 +3,10 @@
   <div class="footer-above">
     <div class="container">
       <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2>Contact</h2>
+          <hr class="star-light">
+        </div>        
         <div class="footer-col col-md-4">
           <h3>{{ site.footer.social }}</h3>
           <ul class="list-inline">
