--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -5,7 +5,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2>Contact</h2>
-          <hr class="star-light">
+          <hr class="star-primary">
         </div>        
         <div class="footer-col col-md-4">
           <h3>{{ site.footer.social }}</h3>
