--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -15,12 +15,8 @@
           </ul>
         </div>
         <div class="footer-col col-md-4">
-          <h3>{{ site.footer.location }}</h3>
-          <p>
-            {% for adress in site.address %}
-            {{ adress.line }} <br>
-            {% endfor %}
-          </p>
+          <h3>{{ site.footer.emails }}</h3>
+          <p>{{ site.emails }}</p>
         </div>        
         <div class="footer-col col-md-4">
           <h3>{{ site.footer.credits }}</h3>
