--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -18,7 +18,7 @@
           <h3>{{ site.footer.emails }}</h3>
           <p></p>
           <p></p>
-          <p>{{ site.emails }}</p>
+          <p>{<p></p>{ site.emails }}</p>
         </div>
         <div class="footer-col col-md-4">
           <h3>{{ site.footer.credits }}</h3>
