--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,9 +8,13 @@
       </div>
     </div>
     <div class="row">
+      <style>
+        p {
+          margin-bottom: 20px; /* Adjust the value to control the amount of space between paragraphs */
+        }
+      </style>
       <p>I am Duyen Nguyen, and I recently completed my graduate studies in Applied Data Science 
           from University of Southern California.</p>
-      <p></p>  
       <p>With a deep passion for data analytics, I am dedicated to uncovering valuable insights through the utilization of 
         a wide range of tools, such as Python, SQL, Tableau, machine learning, statistical analysis, and data mining.</p>
       </div>
