--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -14,17 +14,18 @@
             {% endfor %}
           </ul>
         </div>
+        <style>
+          .footer-col p {
+            margin-bottom: 20px; /* Adjust the value to control the amount of space between email paragraphs */
+          }
+        </style>
         <div class="footer-col col-md-4">
           <h3>{{ site.footer.emails }}</h3>
           <p></p>
-          <p></p>
-          <p></p><p>{{ site.emails }}</p>
+          <p>{{ site.emails }}</p>
         </div>
         <div class="footer-col col-md-4">
           <h3>{{ site.footer.credits }}</h3>
-          <p></p>
-          <p></p>
-          <p></p>
           <p>{{ site.credits }}</p>
         </div>
       </div>
