--- a/_includes/about.html
+++ b/_includes/about.html
@@ -19,7 +19,7 @@
         a wide range of tools, such as Python, SQL, Tableau, machine learning, statistical analysis, and data mining.</p>
       </div>
       <div class="col-lg-8 col-lg-offset-2 text-center">
-        <a href="https://github.com/jeromelachaud/freelancer-theme" class="btn btn-lg btn-outline">
+        <a href="https://github.com/duyen21/portfolio/blob/main/Duyen_Nguyen_Resume.pdf" class="btn btn-lg btn-outline">
           <i class="fa fa-download"></i> Resume
         </a>
       </div>
