--- a/_includes/about.html
+++ b/_includes/about.html
@@ -20,7 +20,7 @@
       </div>
       <div class="col-lg-8 col-lg-offset-2 text-center">
         <a href="https://github.com/duyen21/portfolio/blob/main/Duyen_Nguyen_Resume.pdf" class="btn btn-lg btn-outline">
-          <i class="fa fa-download"></i> Resume
+          <i class=" "></i> View Resume
         </a>
       </div>
     </div>
